--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,4 @@
+10/30/2013 Removed some duplicated strings in favor of the names/keys ported over from Java.
 10/23/2013 Migrated game strings from Java phetcommon
 10/22/2013 Migrated LevelCompletedNode & LevelStartButton from BAA
 10/11/2013 Added strings
