--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,4 @@
+7/7/14 #24 ScoreboardBar
 6/25/14 #23 rename all sounds so that names describe what they sound like, describe their purpose in code
 6/25/14 #16 use 'cheer' for perfect-score sound
 10/30/2013 Removed some duplicated strings in favor of the names/keys ported over from Java.
